[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site"
version = "0.1.0"
description = "A simple static site generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.3",
    "feedgen>=0.9",
    "arrow>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
site = "sitebuilder:cli"

[project.urls]
Repository = "https://github.com/bradmontgomery/site"

[tool.hatch.build.targets.wheel]
packages = ["src/sitebuilder"]

[tool.uv]
managed = true
